corrects z-index problem

--- a/midterm/css/stylesheet.css
+++ b/midterm/css/stylesheet.css
@@ -13,8 +13,6 @@ body {
     background-color: #d4e9e7;
     padding: 0;
     width: 70%;
-    position: relative;
-    z-index: -2;
 }
 
 .header{
@@ -38,11 +36,11 @@ h1 {
     width: 100%;
     height: auto;
     position: relative;
-    z-index: -1;
+    z-index: 0;
 }
 
 main {
-    padding: 0px 10px 30px;;
+    padding: 0px 10px 30px;
 }
 
 #nav__ul {
@@ -86,11 +84,11 @@ a:link, a:visited {
 }
 
 a:hover {
-    background-color: #aad4cf;
+    color: #77bdb5;
 }
 
 a:active {
-    background-color: #77bdb5;
+    color: #aad4cf;
 }
 
 h2 {
@@ -122,7 +120,6 @@ form {
 h3 {
     font-weight: normal;
 }
-
 
 input {
     margin-top: 0.6em;
@@ -166,4 +163,3 @@ footer {
     padding-right: 35px;
     padding-bottom: 35px;
 }
-
